Add GPG public key to pki service

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 		<a href="CA/root_ca_1.crt">Download Root CA 1 here</a>
 		<br>
 		<a href="guide.pdf">View how to guide here</a>
+		<br><br><hr><br>
+		<h1>GPG Public key</h1>
+		<a href="gpg/key1.pub">Download GPG public key 1 (Hsuan-Le Chen [franky920920+gpg_at_gmail.com])</a><br>
+		<p>or you can download these key on <br>
+			<a href="https://keys.openpgp.org/search?q=49C5A33BD6FE7844BD37EEEFA681EC8BEFF2389D">https://keys.openpgp.org/search?q=49C5A33BD6FE7844BD37EEEFA681EC8BEFF2389D</a><br>
+			<a href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0xA681EC8BEFF2389D">https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0xA681EC8BEFF2389D</a><br>
+		</p>
 	</div>
 </body>
 </html>
